[metadata]
name = daqhats
version = 1.4.1.0
author = Measurement Computing Corp.
author_email = info@mccdaq.com
description = MCC DAQ HAT Python Library
url = https://github.com/mccdaq/daqhats
license = MIT
classifiers = 
   Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=2.7
include_package_data = True
